# structured-logging-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  integration-patterns.md  logging-contract.md  trace-model.md
scripts/: bootstrap.sh
structured_logging/adapters/: fastapi_adapter.py  lambda_adapter.py  worker_adapter.py
structured_logging/core/: context.py  formatter.py  logger.py
structured_logging/metrics/: latency.py
structured_logging/schema/: log_event_schema.py
structured_logging/trace/: trace_context.py  trace_propagation.py
tests/: conftest.py
tests/adapters/: test_fastapi_adapter.py  test_lambda_adapter.py  test_worker_adapter.py
tests/core/: test_context.py  test_formatter.py  test_logger.py
tests/metrics/: test_latency.py
tests/schema/: test_log_event_schema.py
tests/trace/: test_trace_context.py  test_trace_propagation.py
