[project]
name = "structured-logging-python"
version = "0.1.0"
description = "Structured logging primitives for distributed ML telemetry pipelines"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "fastapi",
]

[tool.pytest.ini_options]
testpaths = ["tests"]